# top-coder-challenge

./: ANALYSIS_README.md  CLAUDE.md  LICENSE  MASTER-PLAN.md  MODULAR_ARCHITECTURE.md  PLAN.md  analysis.ipynb  analyze_base_rates.py  analyze_components.py  analyze_mileage.py  analyze_mileage_patterns.py  analyze_mileage_simple.py  debug_calculation.py  find_per_diem.py  main.py  optimize_mileage.py  plot.py  private_results.txt  pyproject.toml  reimbursement_analysis.ipynb  reimbursement_calculator.py  run.sh  run_analysis.py  test_accuracy.py  test_results.txt
.cursor/rules/: python.mdc
claude_solution/: EXPERIMENT_LOG.md  README.md  advanced_calculator.py  analyze_cents_bug.py  analyze_errors.py  analyze_ratios.py  best_calculator.txt  calculator_v1.py  calculator_v2.py  check_cents_bug.py  compare_all.py  debug_cases.py  deep_analysis.py  final_optimizer.py  generate_plots.py  interview_analysis.py  large_errors.json  optimize_parameters.py  optimized_params.json  pattern_analysis.py  quick_test.py  reimbursement_calculator.py  reimbursement_calculator_comprehensive.py  reimbursement_calculator_final.py  reimbursement_calculator_optimized.py  reimbursement_calculator_v2.py  reimbursement_calculator_v3.py  run.sh  simple_robust_calculator.py  test_accuracy.py  test_optimized.py  test_v2.py  test_v3.py
components/: README.md  __init__.py  optimizer.py  receipts.py  receipts_new.py
components/bonuses/: bonuses.py
components/bugs/: BUGS_ANALYSIS_REPORT.md  analyze_bugs_deeply.py  bugs.py  test_bugs_hypothesis.py
lucas_solution/: analyze_data.py
(+20 files in other folders)
