[project]
name = "reimbursement-analysis"
version = "0.1.0"
description = "Analysis of ACME Corp's legacy reimbursement system"
requires-python = ">=3.9"
dependencies = [
  "jupyter>=1.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",
  "plotly>=5.15.0",
  "ipykernel>=6.25.0",
]
